# openai-hackathon-wait

./: .cursorignore  .env  .gitignore  LICENSE  README.md  cleanup-paperreview.sh  docker-compose.yml  playground.ipynb  pubmed_fetcher.py  pyproject.toml  restart-db.sh  ruff.toml  start-db.sh  test_validator.py
agents/language_checker/: parser.py  types.py
agents/language_checker/tests/: test_parser.py
agents/structure_validator/: structure_validator.py
backend/: README.md  db.py  main.py  requirements.txt  run.sh
backend/db/init/: 01_schema.sql
data/1601.00002v1/: 1601.00002v1.md
data/1601.00003v1/: 1601.00003v1.md
data/2405/: 2405.md
data/Bagdasarian et al (2024) Acute Effects of Hallucinogens on FC/: Bagdasarian et al (2024) Acute Effects of Hallucinogens on FC.md  Bagdasarian et al (2024) Acute Effects of Hallucinogens on FC_decision.json  Bagdasarian et al (2024) Acute Effects of Hallucinogens on FC_meta.json  Bagdasarian et al (2024) Acute Effects of Hallucinogens on FC_reviews.json  Bagdasarian et al (2024) Acute Effects of Hallucinogens on FC_reviews_synthesis.json  Bagdasarian et al (2024) Acute Effects of Hallucinogens on FC_structure_validator.json  Bagdasarian et al (2024) Acute Effects of Hallucinogens on FC_synthesis.json
data/Bagdasarian_et_al_(2024)_Acute Effects_of_Hallucinogens_on_FC/: Bagdasarian et al (2024) Acute Effects of Hallucinogens on FC_decision.json  Bagdasarian et al (2024) Acute Effects of Hallucinogens on FC_synthesis.json
data/benchmark/5585_Can_Synthetic_Data_Reduce/: manuscript.md  manuscript_decision.json
data/benchmark/6547_Model_Tells_You_What_to_D/: manuscript.md  manuscript_decision.json
data/benchmark/8650_The_Consensus_Game_Langua/: manuscript.md  manuscript_decision.json
data/benchmark/9430_3D_Molecular_Pretraining_/: manuscript.md  manuscript_decision.json
data/benchmark/9504_Modelling_Microbial_Commu/: manuscript.md  manuscript_decision.json  manuscript_reviews.json
frontend/: Dockerfile  README.md  index.html
frontend/src/components/: FileUpload.tsx  ProcessingState.tsx  ResultsDisplay.tsx
frontend/src/lib/: api.ts  config.ts  env.ts
frontend/src/pages/: Index.tsx
legacy/: arxiv_full_data_fetch.py
notebooks/: arxiv_check.ipynb  deep_research_example.ipynb  image_analyser.ipynb  pubmed.ipynb  rag_test.ipynb  reviewer.py  web_search.ipynb
src/openai_hackathon_wait/: __init__.py  create_context.py  main.py  publication_decision.py  rag.py  review_orchestrator.py  review_synthesizer.py  reviewer.py
src/openai_hackathon_wait/agents/: context_from_figures.py  create_context.py  publication_decision.py  review_planner.py  review_synthesizer.py  reviewer.py  reviewer_assistant.py  reviewer_finder.py  (+1 more)
tests/: conftest.py
(+18 files in other folders)
