[project]
name = "openai-hackathon-wait"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kuba Kwiecien", email = "kwiscion@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "biopython>=1.85",
    "ipykernel>=6.29.5",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "loguru>=0.7.3",
    "pydantic>=2.11.3",
    "xmltodict>=0.14.2",
]

[project.scripts]
openai-hackathon-wait = "openai_hackathon_wait:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
