[project]
name = "openai-hackathon-wait"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kuba Kwiecien", email = "kwiscion@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "dotenv>=0.9.9",
    "openai-agents>=0.0.13",
    "arxiv>=2.2.0",
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.56",
    "langchain-openai>=0.3.14",
    "loguru>=0.7.3",
    "openai-agents>=0.0.13",
    "pdfplumber>=0.11.6",
    "pydantic>=2.11.3",
    "loguru>=0.7.3",
    "pdf2image>=1.17.0",
    "pymupdf4llm>=0.0.21",
    "firecrawl>=2.3.0",
    "bio>=1.7.1",
    "xmltodict>=0.14.2",
    "anyio>=4.9.0",
    "fastapi>=0.115.12",
    "python-multipart>=0.0.20",
    "psycopg2>=2.9.10",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.40",
    "greenlet>=3.2.1",
    "torch>=2.7.0",
    "marker-pdf>=1.6.2",
]

[project.scripts]
openai-hackathon-wait = "openai_hackathon_wait:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.find]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
